mdapi/unpackaged/objects/Basecamp_Questionnaire_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Basecamp_Answer__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Basecamp_Question__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Response__c</fullName>
        <label>Questionnaire Response</label>
        <referenceTo>Basecamp_Questionnaire_Response__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Questionnaire Answer</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>